--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
   "author": "Asifraza",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.8.1",
     "mongoose": "^7.4.5",
+    "nodemailer": "^6.9.4",
     "path": "^0.12.7",
+    "randomstring": "^1.3.0",
     "router": "^1.3.8"
   }
 }
