--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemailer": "^6.9.4",
     "path": "^0.12.7",
     "randomstring": "^1.3.0",
+    "razorpay": "^2.9.2",
     "router": "^1.3.8"
   }
 }
